--- a/helm_charts/mdss/values.yaml
+++ b/helm_charts/mdss/values.yaml
@@ -68,7 +68,7 @@ environment: generic                      # Deployment environment type, the def
 # environment: aws_eks_fargate
 
 aws-load-balancer-controller:
-  enabled: true                                         # If set to true and `environment` is set to `aws_eks_fargate`, an AWS Load Balancer Controller will be installed
+  enabled: false                                         # If set to true and `environment` is set to `aws_eks_fargate`, an AWS Load Balancer Controller will be installed
   clusterName: null                                     # Name of the EKS cluster, mandatory if aws-load-balancer-controller.enabled is set to true
   rbac:
     create: true
@@ -93,6 +93,14 @@ mdss_ingress:
   port: 80                              # Port where the ingress should route to
   enabled: false                        # Enable or disable the ingress creation      
   class: nginx                          # Sets the ingress class    
+
+# Auto onboarding settings
+auto_onboarding: true                  # If set to true, it will deploy a container that will do the initial setup automatically if correct values are provided
+mdss_import_config: null                # Content of config file to be imported by the onboarding container
+ONBOARDING_USER_NAME: null              # User name of user that will be created by onboarding container (defaults to admin if left unset)
+ONBOARDING_PASSWORD: null               # Password of user that will be created by onboarding container (randomly generated if left unset, can be retrieved from the "onboarding-env" secret)
+ONBOARDING_EMAIL: null                  # Email of user that will be created by onboarding container
+ONBOARDING_FULL_NAME: null              # Full name of user that will be created by onboarding container
 
 ## Uncomment if you want to use a private repo (it must already be configured in the cluster as a secret)
 #imagePullSecrets:
@@ -161,11 +169,7 @@ mdss_components:
       aws-type: fargate
     resources:
       requests:
-        memory: "2Gi"
-        cpu: "1"
-      limits:
-        memory: "4Gi"
-        cpu: "1"
+        memory: "1Gi"
   
   scanningservice:
     name: scanningservice
@@ -175,11 +179,7 @@ mdss_components:
       aws-type: fargate
     resources:
       requests:
-        memory: "2Gi"
-        cpu: "1"
-      limits:
-        memory: "4Gi"
-        cpu: "1"
+        memory: "1Gi"
   
   notificationservice:
     name: notificationservice
@@ -189,11 +189,7 @@ mdss_components:
       aws-type: fargate
     resources:
       requests:
-        memory: "2Gi"
-        cpu: "1"
-      limits:
-        memory: "4Gi"
-        cpu: "1"
+        memory: "1Gi"
 
   jobdispatcher:
     name: jobdispatcher
@@ -203,11 +199,7 @@ mdss_components:
       aws-type: fargate
     resources:
       requests:
-        memory: "2Gi"
-        cpu: "1"
-      limits:
-        memory: "4Gi"
-        cpu: "1"
+        memory: "1Gi"
   
   postactionsservice:
     name: postactionsservice
@@ -215,13 +207,6 @@ mdss_components:
     image: mdcloudservices_post-actions
     extra_labels:
       aws-type: fargate
-    resources:
-      requests:
-        memory: "2Gi"
-        cpu: "1"
-      limits:
-        memory: "4Gi"
-        cpu: "1"
 
   apigateway:
     name: apigateway
@@ -280,11 +265,7 @@ mdss_components:
       aws-type: fargate
     resources:
       requests:
-        memory: "2Gi"
-        cpu: "1"
-      limits:
-        memory: "4Gi"
-        cpu: "1"
+        memory: "1Gi"
 
   loggingservice:
     name: loggingservice
@@ -294,8 +275,4 @@ mdss_components:
       aws-type: fargate
     resources:
       requests:
-        memory: "2Gi"
-        cpu: "1"
-      limits:
-        memory: "4Gi"
-        cpu: "1"
+        memory: "1Gi"
