--- a/helm_charts/mdss/templates/deployments-template.yml
+++ b/helm_charts/mdss/templates/deployments-template.yml
@@ -41,7 +41,7 @@ spec:
             - containerPort: {{ .port }}
           {{- end }}
           {{- end }}
-          {{- if (or $component.mountConfig (and $component.persistentDir $.Values.persistance_enabled))}}
+          {{- if (or $component.mountConfig (and $component.persistentDir $.Values.persistance_enabled) $component.customMounts)}}
           volumeMounts:
             {{- if $component.mountConfig }}
             - name: {{ $component.mountConfig.configName }}
@@ -55,11 +55,20 @@ spec:
               subPath: {{ $component.name }}
               {{- end }}
             {{ end }}
+            {{- if $component.customMounts }}
+              {{- toYaml $component.customMounts | nindent 12 }}
+            {{- end }}
           {{- end }}
           {{- if $component.resources }}
           resources:
             {{- toYaml $component.resources | nindent 12 }}
           {{- end }}
+          {{- if $component.update_ca }}
+          lifecycle:
+            postStart:
+              exec:
+                command: ["/bin/sh", "-c", "update-ca-certificates"]
+          {{- end}}
       restartPolicy: Always
       {{- if $.Values.imagePullSecrets }}
       imagePullSecrets:
@@ -69,7 +78,7 @@ spec:
       nodeSelector:
         {{- toYaml $component.nodeSelector | nindent 8 }}
       {{- end }}
-      {{- if (or $component.mountConfig (and $component.persistentDir $.Values.persistance_enabled))}}
+      {{- if (or $component.mountConfig (and $component.persistentDir $.Values.persistance_enabled) $component.customVolumes)}}
       volumes:
         {{- if $component.mountConfig }}
         - name: {{ $component.mountConfig.configName }}
@@ -86,10 +95,14 @@ spec:
         - name: {{ $component.name }}
           persistentVolumeClaim:
             claimName: {{ printf "%s-pvc" $.Values.storage_name }}
-        {{ end }}
-        {{ end }}
+        {{- end }}
+        {{- end }}
+        {{- if $component.customVolumes }}
+          {{- toYaml $component.customVolumes | nindent 8 }}
+        {{- end }}
       {{- end }}
       hostAliases:
         {{- toYaml $.Values.mdssHostAliases | nindent 8 }}
+      
 {{ end }}
 {{ end }}
