--- a/helm_charts/mdss/Chart.yaml
+++ b/helm_charts/mdss/Chart.yaml
@@ -5,7 +5,7 @@ description: This is a Helm chart for deploying MetaDefender for Secure Storage 
 long_description: |
   This chart can deploy the following depending on the provided values:
   - All MDSS services in separate pods 
-  - A MongoDB database instance pre-configured to be used by MD Core
+  - A MongoDB database instance pre-configured to be used by MDSS
 
   In addition to the chart, we also provide a number of values files for specific scenarios:
   - mdss-aws-eks-values.yml - for deploying in an AWS environment using Amazon EKS
@@ -35,7 +35,7 @@ long_description: |
 
 type: application
 
-version: 2.2.3
+version: 3.0.0
 
 dependencies:
 - name: aws-load-balancer-controller
