--- a/helm_charts/mdss/templates/storage-template.yml
+++ b/helm_charts/mdss/templates/storage-template.yml
@@ -6,7 +6,7 @@
 kind: StorageClass
 apiVersion: storage.k8s.io/v1
 metadata:
-  name: {{ printf "%s-%s" .Values.app_name .Values.storage_name }}
+  name: {{ printf "%s-%s" .Release.Namespace .Values.storage_name }}
 provisioner: k8s.io/minikube-hostpath
 reclaimPolicy: Retain
 volumeBindingMode: Immediate
@@ -17,7 +17,7 @@ volumeBindingMode: Immediate
 kind: StorageClass
 apiVersion: storage.k8s.io/v1
 metadata:
-  name: {{ printf "%s-%s" .Values.app_name .Values.storage_name }}
+  name: {{ printf "%s-%s" .Release.Namespace .Values.storage_name }}
 provisioner: kubernetes.io/no-provisioner
 volumeBindingMode: WaitForFirstConsumer
 
@@ -27,19 +27,19 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   labels:
-    app: {{ printf "%s-%s-pv" .Values.app_name .Values.storage_name }}
+    app: {{ printf "%s-%s-pv" .Release.Namespace .Values.storage_name }}
     type: local
-  name: {{ printf "%s-%s-pv" .Values.app_name .Values.storage_name }}
+  name: {{ printf "%s-%s-pv" .Release.Namespace .Values.storage_name }}
 spec:
   accessModes:
     - ReadWriteOnce
   capacity:
     storage: 15Gi
-  storageClassName: {{ printf "%s-%s" .Values.app_name $.Values.storage_name }}
+  storageClassName: {{ printf "%s-%s" .Release.Namespace $.Values.storage_name }}
   volumeMode: Filesystem
   persistentVolumeReclaimPolicy: Retain
   local:
-    path: {{ printf "%s/%s-%s" "/data" .Values.app_name .Values.storage_name | quote }}
+    path: {{ printf "%s/%s-%s" "/data" .Release.Namespace .Values.storage_name | quote }}
   nodeAffinity:
     required:
       nodeSelectorTerms:
@@ -63,13 +63,13 @@ spec:
 kind: StorageClass
 apiVersion: storage.k8s.io/v1
 metadata:
-  name: {{ printf "%s-%s" .Values.app_name .Values.storage_name }}
+  name: {{ printf "%s-%s" .Release.Namespace .Values.storage_name }}
 provisioner: efs.csi.aws.com
 ---
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: {{ printf "%s-%s-pv" .Values.app_name .Values.storage_name }}
+  name: {{ printf "%s-%s-pv" .Release.Namespace .Values.storage_name }}
 spec:
   capacity:
     storage: 100Gi
@@ -77,12 +77,12 @@ spec:
   accessModes:
     - ReadWriteMany
   persistentVolumeReclaimPolicy: Retain
-  storageClassName: {{ printf "%s-%s" .Values.app_name .Values.storage_name }}
+  storageClassName: {{ printf "%s-%s" .Release.Namespace .Values.storage_name }}
   csi:
     driver: efs.csi.aws.com
     volumeHandle: {{ .Values.EfsVolumeHandle }}
     volumeAttributes:
-      path: {{ printf "/%s" .Values.app_name}}
+      path: {{ printf "/%s" .Release.Namespace}}
 
 {{ end }}
 
@@ -93,14 +93,13 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: {{ printf "%s-pvc" .Values.storage_name }}
-  namespace: {{ .Values.app_name }}
 spec:
   accessModes:
     - ReadWriteMany
   resources:
     requests:
       storage: 15Gi
-  storageClassName: {{ printf "%s-%s" .Values.app_name .Values.storage_name }}
+  storageClassName: {{ printf "%s-%s" .Release.Namespace .Values.storage_name }}
 {{ end }}
 
 {{ end }}
